<resources>
    <string name="app_name">My Fitness</string>
    <string name="action_settings">Settings</string>
    <string name="exercise_name">Exercise Name:</string>
    <string name="reps">Reps.:</string>
    <string name="sets">Sets:</string>
    <string name="weights">Weights:</string>
    <string name="body_part">Body Part:</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
</resources>
